Jdom-librarys, classpath

--- a/Spielwiese/.classpath
+++ b/Spielwiese/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/jdom"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom/jdom-2.0.5-contrib.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom/jdom-2.0.5-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom/jdom-2.0.5-junit.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom/jdom-2.0.5-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom/jdom-2.0.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
