Refactoring Packagenamen, Article und Cluster getrennt fuer Importer und GUI, Datenaufbereitung fuer GUI (noch unvollstaendig)

--- a/Lucene-Clustering/.classpath
+++ b/Lucene-Clustering/.classpath
@@ -44,5 +44,6 @@
 	<classpathentry kind="lib" path="lib/lucene-4.5.0/core/lucene-core-4.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-4.5.0/queries/lucene-queries-4.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-4.5.0/queryparser/lucene-queryparser-4.5.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Lucene-Clustering Shared"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
